[package]
name = "ratpack"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^0.14", features = [ "http1", "http2", "server", "runtime", "tcp", "stream" ] }
http = "^0.2"
async-recursion = "^1"
tokio = { version = "^1", features = [ "full" ] }

[dev-dependencies]
log = "^0.4"
env_logger = "^0.9"
