[package]
name = "ratpack"
version = "0.1.2"
edition = "2021"
description = "ratpack is a HTTP framework designed around simplicity and ease-of-use"
authors = ["Erik Hollensbe <erik.hollensbe@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]
license = "BSD-3-Clause"
homepage = "https://github.com/zerotier/ratpack"
repository = "https://github.com/zerotier/ratpack"

[dependencies]
hyper = { version = "^0.14", features = [ "http1", "http2", "server", "runtime", "tcp", "stream" ] }
http = "^0.2"
async-recursion = "^1"
tokio = { version = "^1", features = [ "full" ] }
tokio-rustls = { version = "^0.23", optional = true }
webpki = { version = "^0.22", optional = true }
log = { version = "^0.4", optional = true }

[dev-dependencies]
log = "^0.4"
env_logger = "^0.9"

[features]
default = ["logging"]
logging = ["log"]
tls = ["tokio-rustls", "webpki"]
